dependencies:
${MIRROR_WGET}/download_package purl.obolibrary.org.pr.obo
${MIRROR_WGET}/download_package purl.obolibrary.org.uberon.obo
${MIRROR_WGET}/download_package ftp.ebi.ac.uk.goload 
${MIRROR_WGET}/download_package ftp.geneontology.org.goload 
${MIRROR_WGET}/download_package snapshot.geneontology.org.goload
${MIRROR_WGET}/download_package snapshot.geneontology.org.goload.noctua

TAG: goload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: goload-6-0-15-3
TAG: goload-6-0-15-2
DATE: 04/22/2020
STAFF: lec
CHANGES: lib/ecolib.py/ignore comments

TAG: goload-6-0-15-1
DATE: 02/11/2020
STAFF: lec
CHANGES: TR13231/Supply Reactone annotations in gaf (and gpad)

TAG: goload-6-0-13-13
DATE: 08/19/2019
STAFF: lec
CHANGES:TR13152/gomousenoctua/update qualifier

TAG: goload-6-0-13-12
TAG: goload-6-0-13-11
DATE: 03/26/2018
STAFF: sc
CHANGES:TR13059 - new url/filename for go rat load
 - updated index.html

TAG: goload-6-0-13-10
TAG: goload-6-0-13-9
DATE: 02/05/2019
STAFF: lec 
CHANGES:
TR13035/gorefgen/gorefgen.config.default
changed from J:161428 to J:265638

TAG: goload-6-0-13-8
DATE: 01/30/2019
STAFF: lec 
CHANGES:
TR13011/see mirror_wget/noctua location change

TAG: goload-6-0-13-7
TAG: goload-6-0-13-6
DATE: 01/30/2019
STAFF: lec 
CHANGES:
TR13029/see mirror_wget/gocfp location change

TAG: goload-6-0-13-5
TAG: goload-6-0-13-4
TAG: goload-6-0-13-3
DATE: 01/28/2019
STAFF: lec 
CHANGES:
TR13011/see mirror_wget/noctua location changed
on hold/input file has user/login issue

TAG: goload-6-0-13-2
DATE: 01/22/2019
STAFF: lec 
CHANGES:
TR12976/boock PAINT annotations from GOA mouse load

TAG: goload-6-0-13-1
DATE: 09/04/2018
STAFF: lec 
TR12734/GenFeVah merge
remove VEGA

TAG: goload-6-0-12-12
TAG: goload-6-0-12-11
DATE: 08/15/2018
STAFF: lec
CHANGES TR12918/PAINT/gorefgen

TAG: goload-6-0-12-10
DATE: 08/07/2018
STAFF: lec
CHANGES TR12910/goamouse/ change order of qualfier (col 3)

TAG: goload-6-0-12-9
TAG: goload-6-0-12-8